# aggregated_event_data

./: .gitignore  README.md  pyproject.toml  requirements.txt
aggregated_event_data/: __init__.py  controller.py  logging.py  production_entities.py  production_resources.py  simulate.py
assembly_simulation/: __init__.py  controller.py  logging.py  production_entities.py  production_resources.py  simulate.py
examples/: example_1.json  example_2.json  example_3.json  example_material_1.json
